--- a/src/pages/cartPage/CartPage.scss
+++ b/src/pages/cartPage/CartPage.scss
@@ -1,106 +1,127 @@
 @import "../../App.scss";
 
-.cart-page{
-    min-height: 50vh;
-}
-.qty{
-    margin: 12px 0 6px 0;
-    &-text{
-        margin-right: 10px;
-    }
-    &-change{
-        .qty-inc,.qty-dec{
-            width: 32px;height: 32px;
-            border: 1px solid rgba(0,0,0,0.1);
-            transition: $transition;
-            &:hover{
-                color: darken($clr-light-blue,10%);
-                border: 1px solid rgba(0,0,0,0.3);
-
-            }
-        }
-        .qty-value{
-            width: 40px;
-        }
-    }
+.cart-page {
+  min-height: 50vh;
 }
 
-.cart-content{
-    row-gap: 40px;
-    @media screen and (max-width:992px) {
-        grid-template-columns: 2fr 1fr;
-        column-gap: 36px;
-        align-items: start;
-    }
-    @media screen and (max-width:1200px) {
-        column-gap: 60px;
-    }
-    .cart-left{
-        .cart-items{
-            row-gap: 20px;
-            margin: 24px 0;
-            .cart-item{
-                padding-bottom: 20px;
-                border-bottom: 1px solid rgba(0,0,0,0.1);
-                row-gap: 20px;
-                .rmv-from-cart-btn{
-                    margin-top: 12px;
-                }
-                @media screen and (min-width:576px) {
-                    grid-template-columns: 30% auto;
-                    column-gap: 14px;
-                }
-                @media screen and (min-width:678px) {
-                    grid-template-columns: 150px auto;
-                    column-gap: 20px;
-                }
-                @media screen and (min-width:992px) {
-                    column-gap: 32px;
-                }
-                &-img{
-                    padding-bottom: 12px;
-                }
-                &-info{
-                    .sub-total{
-                        padding: 6px 0;
-                    }
-                }
-            }
+.qty {
+  margin: 12px 0 6px 0;
 
+  &-text {
+    margin-right: 10px;
+  }
+
+  &-change {
+    .qty-inc,
+    .qty-dec {
+      width: 32px;
+      height: 32px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      transition: $transition;
+
+      &:hover {
+        color: darken($clr-light-blue, 10%);
+        border: 1px solid rgba(0, 0, 0, 0.3);
+      }
+    }
+
+    .qty-value {
+      width: 40px;
+    }
+  }
+}
+
+.cart-content {
+  row-gap: 40px;
+
+  @media screen and (max-width: 992px) {
+    grid-template-columns: 2fr 1fr;
+    column-gap: 36px;
+    align-items: start;
+  }
+
+  @media screen and (max-width: 1200px) {
+    column-gap: 60px;
+  }
+
+  .cart-left {
+    .cart-items {
+      row-gap: 20px;
+      margin: 24px 0;
+
+      .cart-item {
+        padding-bottom: 20px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        row-gap: 20px;
+
+        .rmv-from-cart-btn {
+          margin-top: 12px;
         }
-    }
-    .cart-right{
-        margin: 24px 0;
-        padding: 1rem  2rem;
-        .cart-summary{
-            display: flex;flex-direction: column;
-            min-height: 380px;
 
-            > & {
-                padding: 16px;
-            }
-            &-title{
-                border-bottom: 1px solid rgba(0,0,0,0.1);
-                
-            }
-            &-info{
-                padding: 16px 0 16px  0;
-                li{
-                    margin: 6px 0;
-                }
-            }
-            &-total{
-                margin-top: auto;
-                margin-bottom: 16px;
-                padding-top: 12px;
-                border-bottom: 1px solid rgba(0,0,0,0.1);
-
-            }
-            &-btn{
-                .btn-secondary{
-                    width: 100%;
-                }
-            }
+        @media screen and (min-width: 576px) {
+          grid-template-columns: 30% auto;
+          column-gap: 14px;
         }
+
+        @media screen and (min-width: 678px) {
+          grid-template-columns: 150px auto;
+          column-gap: 20px;
+        }
+
+        @media screen and (min-width: 992px) {
+          column-gap: 32px;
+        }
+
+        &-img {
+          padding-bottom: 12px;
+        }
+
+        &-info {
+          .sub-total {
+            padding: 6px 0;
+          }
+        }
+      }
     }
+  }
+
+  .cart-right {
+    margin: 24px 0;
+    padding: 1rem 2rem;
+
+    .cart-summary {
+      display: flex;
+      flex-direction: column;
+      min-height: 380px;
+
+      & > & {
+        padding: 16px;
+      }
+
+      &-title {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      }
+
+      &-info {
+        padding: 16px 0;
+
+        li {
+          margin: 6px 0;
+        }
+      }
+
+      &-total {
+        margin-top: auto;
+        margin-bottom: 16px;
+        padding-top: 12px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      }
+
+      &-btn {
+        .btn-secondary {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
