--- a/src/pages/cartPage/CartPage.css
+++ b/src/pages/cartPage/CartPage.css
@@ -391,6 +391,13 @@ input, textarea, select {
 .cart-content {
   row-gap: 40px;
 }
+
+@media screen and (max-width: 1200px) {
+  .cart-content {
+    -moz-column-gap: 60px;
+    column-gap: 60px;
+  }
+}
 @media screen and (max-width: 992px) {
   .cart-content {
     grid-template-columns: 2fr 1fr;
@@ -399,10 +406,9 @@ input, textarea, select {
     align-items: start;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 768px) {
   .cart-content {
-    -moz-column-gap: 60px;
-         column-gap: 60px;
+    grid-template-columns: 1fr;
   }
 }
 .cart-content .cart-left .cart-items {
@@ -471,4 +477,5 @@ input, textarea, select {
 }
 .cart-content .cart-right .cart-summary-btn .btn-secondary {
   width: 100%;
-}/*# sourceMappingURL=CartPage.css.map */
+}
+/*# sourceMappingURL=CartPage.css.map */
