--- a/src/pages/cartPage/CartPage.scss
+++ b/src/pages/cartPage/CartPage.scss
@@ -34,14 +34,16 @@
 .cart-content {
   row-gap: 40px;
 
+  @media screen and (max-width: 1200px) {
+    column-gap: 60px;
+  }
   @media screen and (max-width: 992px) {
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns:2fr 1fr;
     column-gap: 36px;
     align-items: start;
   }
-
-  @media screen and (max-width: 1200px) {
-    column-gap: 60px;
+  @media screen and (max-width: 768px) {
+    grid-template-columns:1fr;
   }
 
   .cart-left {
@@ -61,6 +63,7 @@
         @media screen and (min-width: 576px) {
           grid-template-columns: 30% auto;
           column-gap: 14px;
+        
         }
 
         @media screen and (min-width: 678px) {
